중간 생성물 push